--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,13 @@
 <div class="recipe recipe-list-item">
-    <div class="recipe-cover">
-        <a href="{% url 'recipes:recipe' recipe.id %}">
-            <img src="{{ recipe.cover.url }}" alt="temporario">
-        </a>
-    </div>
+    
+    {% if recipe.cover %}
+        <div class="recipe-cover">
+            <a href="{% url 'recipes:recipe' recipe.id %}">
+                <img src="{{ recipe.cover.url }}" alt="temporario">
+            </a>
+        </div>
+    {% endif %}
+
 
     <div class="recipe-title-container">
         <a href="{% url 'recipes:recipe' recipe.id %}">
@@ -11,22 +15,37 @@
         </a>
     </div>
 
+
     <div class="recipe-author">
-        <span class="recipe-author-item">
-            <i class="fas fa-user"></i>
-            {{ recipe.author.first_name }} {{ recipe.author.last_name }}
-        </span>
+
+
+        {% if recipe.author is not None %}
+            <span class="recipe-author-item">
+                <i class="fas fa-user"></i>
+                {{ recipe.author.first_name }} {{ recipe.author.last_name }}
+            </span>
+        {% else %}
+            Desconhecido            
+        {% endif %}
+
+
+
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"></i>
             {{ recipe.created_at|date:"d/m/Y" }} às {{ recipe.created_at|date:"H:i" }}
         </span>
-        <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha/">
-                <i class="fas fa-layer-group"></i>
-                <span>{{ recipe.category.name }}</span>
-            </a>
-        </span>
+
+        {% if recipe.category is not None %}
+            <span class="recipe-author-item">
+                <a href="{% url 'recipes:category' recipe.category.id %}">
+                    <i class="fas fa-layer-group"></i>
+                    <span>{{ recipe.category.name }}</span>
+                </a>
+            </span>
+        {% endif %}
+
     </div>
+
 
     <div class="recipe-content">
         <p>
@@ -34,7 +53,6 @@
         </p>
 
     </div>
-
 
 
     <div class="recipe-meta-container">
@@ -61,6 +79,7 @@
             </a>
         </footer>
     {% endif %}
+
 
     {% if is_detail_page is True %}
         <div class="preparations-steps">
